--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello World</h1>
-        <p>This HTML code is inside of a '.erb' file in the views directory, where it belongs.</p>
-    </body>
+    <h1>Buster's Best Bowling Alley</h1>
 </html>
